--- a/README.pod
+++ b/README.pod
@@ -1,25 +1,8 @@
 =head1 NAME
 
-Plack::Middleware::Debug::DBIC::QueryLog - Log DBIC Queries
+Catalyst::TraitFor::Model::DBIC::Schema::QueryLog::AdoptPlack - Use a Plack Middleware QueryLog
 
 =head2 SYNOPSIS
-
-    use Plack::Builder;
-
-    my $app = ...; ## Build your Plack App
-
-    builder {
-        enable 'Debug::DBIC::QueryLog', querylog_args => {passthrough => 1}; 
-        $app;
-    };
-
-You need to 'tell' your applications instance of L<DBIx::Class> to use the 
-L<DBIx::Class::QueryLog> object, which is stored in the L<Plack> C<$env> at
-C<$env->{'plack.middleware.dbic.querylog'}>.  If you are using L<Catalyst> and
-a modern L<Catalyst::Model::DBIC::Schema> you can use the supplied trait
-L<Catalyst::TraitFor::Model::DBIC::Schema::QueryLog::AdoptPlack>, which is 
-compatible with L<Catalyst::TraitFor::Model::DBIC::Schema::QueryLog>.  For
-example in you L<Catalyst::Model::DBIC::Schema> model:
 
     package MyApp::Web::Model::Schema;
     use parent 'Catalyst::Model::DBIC::Schema';
@@ -27,37 +10,42 @@ example in you L<Catalyst::Model::DBIC::Schema> model:
 	__PACKAGE__->config({
         schema_class => 'MyApp::Schema',
         traits => ['QueryLog::AdoptPlack'],
-		connect_info => {
-			dsn => 'dbi:SQLite:dbname=__path_to(share,var,sqlite.db)__',
-		},
+        ## .. rest of configuration
 	});
-
-    1;
 
 =head1 DESCRIPTION
 
-Adds a debug panel and querylog object for logging L<DBIx::Class> queries.  Has
-support for L<Catalyst> via a L<Catalyst::TraitFor::Model::DBIC::Schema::QueryLog>
-compatible trait, L<Catalyst::TraitFor::Model::DBIC::Schema::QueryLog::AdoptPlack>.
+This is a trait for L<Catalyst::Model::DBIC::Schema> which adopts a L<Plack>
+created L<DBIx::Class::QueryLog> and logs SQL for a given request cycle.  It is
+intended to be compatible with L<Catalyst::TraitFor::Model::DBIC::Schema::QueryLog>
+which you may already be using.
+
+It picks up the querylog from C<< $env->{'plack.middleware.debug.dbic.querylog'} >>
+which is generally provided by the L<Plack> middleware L<Plack::Middleware::Debug::DBIC::QueryLog>
+In fact you will probably use these two modules together.  Please see the documentation
+in L<Plack::Middleware::Debug::DBIC::QueryLog> for an example.
 
 =head1 OPTIONS
 
-This debug panel defines the following options.
+This model defines the following options.
 
 =head2 querylog
 
 Takes a L<DBIx::Class::QueryLog> object, which is used as the querylog for the
-application.  If you don't provide this, we will build one automatically, using
-L</querylog_args> if provided.  Generally you will use this only if you are 
-instantiating a querylog object outside your L<Plack> based application, such
-as in an IOC container like L<Bread::Board>.
+application.  Generally the whole point of this trait is to adopt the query log
+provided by the L<Plack> middleware, but if you have special needs you can set
+an instance here.  You may wish to do this if you have complicated instatiation
+needs.
 
 =head2 querylog_args
 
-Takes a HashRef which is passed to L<DBIx::Class::QueryLog> at construction.
+Takes a HashRef which is passed to L<DBIx::Class::QueryLog> at construction,
+if needed.
 
 =head1 SEE ALSO
 
+L<Plack::Middleware::Debug::DBIC::QueryLog>,
+L<Catalyst::TraitFor::Model::DBIC::Schema::QueryLog>, L<Catalyst::Model::DBIC::Schema>,
 L<Plack::Middleware::Debug>
 
 =head1 AUTHOR
